fixed horizontal scrolling bug

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@
 body{
     background-color:black;
     height:100%;
-    width:100%;
     font-family: 'Piazzolla', serif;
     font-weight:300;
 }
